--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="theme-color" content="#9be22d" />
+    <meta name="description" content="Enterprise software development in Kenya. Custom web & mobile apps, ERP systems, digital marketing. ISO certified, bank-grade security." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Korima Technologies - Enterprise Software Development Kenya | Custom Solutions</title>
   </head>
   <body>
     <div id="root"></div>
